@@ -10,6 +10,7 @@ Changes from v2.4.5 to v2.4.6
   page in general settings
 - Emulate some texture composition bugs
 - Fixed random crashes caused by use of uninitialized memory
+- Fix some demo incompatibilities caused by slime trail removal
 
 Changes from v2.4.4 to v2.4.5
 - fix crash when saving the game in levels with lots of monsters
